frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <SUBDOMAIN>
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-<ENV>
spec:
  ingressClassName: nginx
  rules:
    - host: <SUBDOMAIN>.dpschool.app
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80   
  tls:
  - hosts:
    - <SUBDOMAIN>.dpschool.app
    secretName: <SUBDOMAIN>-certificate
